--- a/css/prism.css
+++ b/css/prism.css
@@ -1,12 +1,12 @@
 /* PrismJS 1.29.0
-https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascript+bash+git+jsx+tsx+typescript&plugins=line-highlight+line-numbers+file-highlight+command-line+toolbar+copy-to-clipboard */
+https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascript+css-extras+gn+http+js-extras+json+json5+jsonp+jsstacktrace+js-templates+markdown+markup-templating+mongodb+jsx+tsx+typescript&plugins=line-highlight+line-numbers+autoloader+command-line+toolbar+copy-to-clipboard+download-button */
 code[class*="language-"],
 pre[class*="language-"] {
   color: #000;
   background: 0 0;
   text-shadow: 0 1px #fff;
   font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
-  font-size: 14px;
+  font-size: 1em;
   text-align: left;
   white-space: pre;
   word-spacing: normal;
@@ -21,7 +21,6 @@ pre[class*="language-"] {
   -ms-hyphens: none;
   hyphens: none;
 }
-
 code[class*="language-"] ::-moz-selection,
 code[class*="language-"]::-moz-selection,
 pre[class*="language-"] ::-moz-selection,
@@ -44,7 +43,7 @@ pre[class*="language-"]::selection {
 }
 pre[class*="language-"] {
   padding: 1em;
-  margin: 0 0;
+  margin: 0.5em 0;
   overflow: auto;
   border-radius: 5px;
   border: 1px solid #eee;
@@ -55,7 +54,6 @@ pre[class*="language-"].file {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
-
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
   background: #f5f2f0;
@@ -235,7 +233,6 @@ pre[class*="language-"].line-numbers > code {
   -ms-user-select: none;
   user-select: none;
 }
-
 .command-line-prompt > span:before {
   opacity: 0.7;
   content: " ";
@@ -266,7 +263,7 @@ div.code-toolbar > .toolbar {
   top: 0.3em;
   right: 0.2em;
   transition: opacity 0.3s ease-in-out;
-  opacity: 1;
+  opacity: 0;
 }
 div.code-toolbar:hover > .toolbar {
   opacity: 1;
@@ -285,7 +282,6 @@ div.code-toolbar > .toolbar > .toolbar-item > button {
   border: 0;
   color: inherit;
   font: inherit;
-  font-family: monospace;
   line-height: normal;
   overflow: visible;
   padding: 0;
@@ -297,12 +293,12 @@ div.code-toolbar > .toolbar > .toolbar-item > a,
 div.code-toolbar > .toolbar > .toolbar-item > button,
 div.code-toolbar > .toolbar > .toolbar-item > span {
   color: #bbb;
-  font-size: 1.2em;
+  font-size: 0.8em;
   padding: 0 0.5em;
   background: #f5f2f0;
   background: rgba(224, 224, 224, 0.2);
-  box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0);
-  border-radius: 0.2em;
+  box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.2);
+  border-radius: 0.5em;
 }
 div.code-toolbar > .toolbar > .toolbar-item > a:focus,
 div.code-toolbar > .toolbar > .toolbar-item > a:hover,
