--- a/css/prism.css
+++ b/css/prism.css
@@ -6,7 +6,7 @@ pre[class*="language-"] {
   background: 0 0;
   text-shadow: 0 1px #fff;
   font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
-  font-size: 1em;
+  font-size: 14px;
   text-align: left;
   white-space: pre;
   word-spacing: normal;
@@ -263,7 +263,7 @@ div.code-toolbar > .toolbar {
   top: 0.3em;
   right: 0.2em;
   transition: opacity 0.3s ease-in-out;
-  opacity: 0;
+  opacity: 1;
 }
 div.code-toolbar:hover > .toolbar {
   opacity: 1;
@@ -281,7 +281,7 @@ div.code-toolbar > .toolbar > .toolbar-item > button {
   background: 0 0;
   border: 0;
   color: inherit;
-  font: inherit;
+  font-family: monospace;
   line-height: normal;
   overflow: visible;
   padding: 0;
@@ -293,12 +293,10 @@ div.code-toolbar > .toolbar > .toolbar-item > a,
 div.code-toolbar > .toolbar > .toolbar-item > button,
 div.code-toolbar > .toolbar > .toolbar-item > span {
   color: #bbb;
-  font-size: 0.8em;
-  padding: 0 0.5em;
+  font-size: 16px;
+  padding: 0.25em 0.5em 0 0;
   background: #f5f2f0;
   background: rgba(224, 224, 224, 0.2);
-  box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.2);
-  border-radius: 0.5em;
 }
 div.code-toolbar > .toolbar > .toolbar-item > a:focus,
 div.code-toolbar > .toolbar > .toolbar-item > a:hover,
