--- a/blog/styles.css
+++ b/blog/styles.css
@@ -1,3 +1,13 @@
+.comment-container {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin: 0 auto;
+    padding: 1rem;
+    justify-content: center;
+    background-color: rgb(197, 165, 165);
+}
+
 .comment {
     display: flex;
     flex-direction: column;
@@ -9,4 +19,29 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+/* same as .container, tailwind has a default class named container */
+.container_nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+
+    background-color: var(--cg-black);
+    color: var(--cg-white);
+    padding: 0px 0px;
+}
+
+label {
+    width: 100%;
+}
+
+label > input,
+label > textarea {
+    width: 100%;
+    margin: 0.5rem 0;
+    padding: 0.5rem;
+    border: 1px solid var(--cg-black);
+    border-radius: 5px;
 }
