--- a/css/screen.css
+++ b/css/screen.css
@@ -176,7 +176,7 @@
   margin-bottom: 0.5rem;
 }
 
-h1 {
+h1:not(.nostyle) {
   border-bottom: 1px solid #ccc;
   padding-bottom: 1rem;
   font-size: 2rem;
@@ -242,7 +242,7 @@ code:not([class]) {
   background-position: 0 1rem;
 }
 
-h2 {
+h2:not(.nostyle) {
   padding-top: 1rem;
   color: blue;
   font-size: 1.75rem;
@@ -254,7 +254,7 @@ h2 + ul {
   list-style-type: circle;
 }
 
-h3 {
+h3:not(.nostyle) {
   font-size: 12px;
   font-weight: 400;
   text-transform: uppercase;
@@ -369,6 +369,10 @@ text.actor,
   font-size: 14px !important;
 }
 
+.nostyle {
+  font-family: serif;
+}
+
 /* Footer
 ------------------------------------------------------------------- */
 
@@ -455,16 +459,16 @@ text.actor,
     padding-top: 4rem;
   }
 
-  h1 {
+  h1:not(.nostyle) {
     font-size: 2.75rem;
   }
 
-  h2 {
+  h2:not(.nostyle) {
     position: relative;
     font-size: 2.25rem;
   }
 
-  h2::before {
+  h2:not(.nostyle):before {
     position: absolute;
     left: -3.5rem;
     display: inline-block;
