--- a/styles.css
+++ b/styles.css
@@ -45,26 +45,49 @@ body {
     /* border: solid red; */
 }
 
-.blog-list {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    list-style: none;
+/* styling for blog preview */
+
+#blog-list {
+    width: 80%;
+    margin: 0 auto;
+    padding: 40px 0;
 }
 
 .post-preview {
-    height: 200px;
-    width: 500px;
+    display: grid;
+    margin-bottom: 40px;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 20px;
 }
 
-.blog-list div {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 10px 10px;
+.post-title {
+    font-size: 1.5em;
     margin-bottom: 10px;
-    border-radius: 10px;
-    background-color: rgba(218, 220, 220, 0.5);
+}
+
+.post-subtitle {
+    font-size: 1.2em;
+    color: #777;
+    margin-bottom: 10px;
+}
+
+.post-description {
+    font-size: 1em;
+    margin-bottom: 10px;
+}
+
+.post-preview > a {
+    margin-right: auto;
+    text-decoration: none;
+    color: #007bff;
+    padding: 10px 15px;
+    border: 1px solid #007bff;
+    border-radius: 4px;
+}
+
+.post-preview > a:hover {
+    background-color: #007bff;
+    color: white;
 }
 
 .nav-list {
