--- a/css/screen.css
+++ b/css/screen.css
@@ -374,6 +374,28 @@ text.actor,
   height: 40%;
 }
 
+.iframe-full {
+  width: 100%;
+  height: 100%;
+  border-bottom-left-radius: 0;
+}
+
+.side-by-side-container {
+  display: flex;
+}
+
+.side-by-side-child {
+  flex: 1;
+}
+
+.side-by-side-child:last-child {
+  margin: 0 0 0.5rem 0;
+}
+
+div > .file {
+  border-bottom-right-radius: 0 !important;
+}
+
 /* Footer
 ------------------------------------------------------------------- */
 
