--- a/blog/styles.css
+++ b/blog/styles.css
@@ -4,6 +4,7 @@ body {
     width: 100vw;
     justify-content: center;
     align-items: center;
+    overflow-x: hidden;
 }
 
 .main {
@@ -163,9 +164,19 @@ label > textarea {
     flex-direction: column;
     align-items: flex-start;
     width: 100%;
-    padding-left: 100px;
-
     margin-bottom: 40px;
+    font-family:
+        system-ui,
+        -apple-system,
+        BlinkMacSystemFont,
+        "Segoe UI",
+        Roboto,
+        Oxygen,
+        Ubuntu,
+        Cantarell,
+        "Open Sans",
+        "Helvetica Neue",
+        sans-serif;
 }
 
 .content h1,
