--- a/css/screen.css
+++ b/css/screen.css
@@ -416,6 +416,43 @@ text.actor,
     0px 0px 15px blue;
 }
 
+.border {
+  display: flex;
+  border-width: 5px;
+  border-color: blue;
+  width: 100%;
+  height: 50px;
+  margin-bottom: 6px;
+  justify-content: center;
+  align-items: center;
+  font-family: monospace;
+}
+
+.solid {
+  border-style: solid;
+}
+.dashed {
+  border-style: dashed;
+}
+.dotted {
+  border-style: dotted;
+}
+.double {
+  border-style: double;
+}
+.groove {
+  border-style: groove;
+}
+.ridge {
+  border-style: ridge;
+}
+.inset {
+  border-style: inset;
+}
+.outset {
+  border-style: outset;
+}
+
 /* Footer
 ------------------------------------------------------------------- */
 
