--- a/css/styles.css
+++ b/css/styles.css
@@ -38,16 +38,19 @@ body {
   color: var(--cg-white);
   padding: 0px 0px;
 
+  /* Debug border */
   /* border: solid red; */
 }
 
 .nav-list {
-  /* border: solid blue; */
   display: flex;
   flex-direction: row;
   position: relative;
   right: 30px;
   list-style: none;
+
+  /* Debug border */
+  /* border: solid blue; */
 }
 
 .navbar a {
@@ -100,12 +103,14 @@ main {
   max-width: 100%;
   margin: 1em 0 2em 0;
 
+  /* Debug border */
   /* border: 2px solid blue; */
 }
 
 .item-link {
   width: 70%;
 
+  /* Debug border */
   /* border: 2px solid red; */
 }
 
@@ -116,6 +121,7 @@ main {
   flex-basis: 50px;
   flex-grow: 2;
 
+  /* Debug border */
   /* border: 2px solid black; */
 }
 
@@ -134,6 +140,7 @@ main {
   text-align: center;
   justify-content: center;
 
+  /* Debug border */
   /* border: 2px solid green; */
 }
 
